[project]
name = "pynosqlc"
version = "0.1.0"
description = "pynosqlc monorepo — JDBC-inspired unified async NoSQL access for Python"
requires-python = ">=3.12"
dependencies = [
    "pynosqlc-core",
    "pynosqlc-memory",
    "pynosqlc-mongodb",
    "pynosqlc-dynamodb",
    "pynosqlc-cosmosdb",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/memory",
    "packages/mongodb",
    "packages/dynamodb",
    "packages/cosmosdb",
]

[tool.uv.sources]
pynosqlc-core = { workspace = true }
pynosqlc-memory = { workspace = true }
pynosqlc-mongodb = { workspace = true }
pynosqlc-dynamodb = { workspace = true }
pynosqlc-cosmosdb = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
