[project]
name = "pynosqlc"
version = "0.1.0"
description = "pynosqlc monorepo — JDBC-inspired unified async NoSQL access for Python"
requires-python = ">=3.12"
dependencies = [
    "alt-python-pynosqlc-core",
    "alt-python-pynosqlc-memory",
    "alt-python-pynosqlc-mongodb",
    "alt-python-pynosqlc-dynamodb",
    "alt-python-pynosqlc-cosmosdb",
    "alt-python-pynosqlc-redis",
    "alt-python-pynosqlc-cassandra",
]

[project.urls]
Homepage = "https://github.com/alt-python/pynosqlc"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/memory",
    "packages/mongodb",
    "packages/dynamodb",
    "packages/cosmosdb",
    "packages/redis",
    "packages/cassandra",
]

[tool.uv.sources]
alt-python-pynosqlc-core = { workspace = true }
alt-python-pynosqlc-memory = { workspace = true }
alt-python-pynosqlc-mongodb = { workspace = true }
alt-python-pynosqlc-dynamodb = { workspace = true }
alt-python-pynosqlc-cosmosdb = { workspace = true }
alt-python-pynosqlc-redis = { workspace = true }
alt-python-pynosqlc-cassandra = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
